# wigglytuff

./: README.md  compose.yaml  config.yaml  go.mod  main.go  sys-design-diagram.ai
bot-notifier/: Taskfile.yml  config.yaml  main.py  mypy.ini  pyproject.toml  ruff.toml
bot-notifier/docker/: Dockerfile
bot-notifier/notifier/blueprints/: __init__.py
bot-notifier/notifier/blueprints/health/: api.py
bot-notifier/notifier/blueprints/root/: api.py
bot-notifier/notifier/core/: config.py
bot-notifier/notifier/core/exceptions/: __init__.py  config_value_error.py  environment_value_error.py  question_value_error.py  request_value_error.py
bot-notifier/notifier/core/flask/: factory.py
bot-notifier/notifier/core/util/: __init__.py  requests.py  responses.py
database/: database.go
db-cache/: .gitignore  go.mod  go.sum
discord/: discord.go
fetch-scraper/: Taskfile.yml  config.yaml  main.py  pylintrc  pyproject.toml
fetch-scraper/docker/: Dockerfile
fetch-scraper/scraper/core/: cli.py  config.py  logger.py  yml_reader.py
fetch-scraper/scraper/core/exceptions/: __init__.py  cli_value_error.py  config_value_error.py  environment_value_error.py  path_error.py  rabbitmq_error.py  request_value_error.py  value_error_wrapper.py
fetch-scraper/scraper/models/: job.py
fetch-scraper/scraper/producers/: __init__.py  hello_world_producer.py  job_producer.py  producer.py  sample_job_producer.py
fetch-scraper/scraper/rabbitmq/: rabbit_queue.py
models/: job.go
postgres/: init.sql
rpc-cache/: Taskfile.yml  config.yaml  go.mod  go.sum
scraper/: scraper.go
(+19 files in other folders)
